TAG: qcreports_db-6-0-22-37
TAG: qcreports_db-6-0-22-36
DATE: 02/28/2023
STAFF: lec
wts2-556/fl2-210/Request for additional GO QC report: under-annotated genes (TR13434)
monthly/GO_Unannotationed.py

TAG: qcreports_db-6-0-22-35
DATE: 02/22/2023
STAFF: lec
wts2-1115/fl2-178/QC reports/wiki/etc. changes due to retiring in MGI (part 1)

TAG: qcreports_db-6-0-22-34
DATE: 02/10/2023
STAFF: sc
WTS2-1114 - report of symbols with GO NOCTUA annotations that have
   symbol, merger, or withdrawal, delete in the last month

TAG: qcreports_db-6-0-22-33
DATE: 02/09/2023
STAFF: lec
wts2-1097/fl2-203/add Experiments where Curation State=Done and Evaluation !=Yes
mgd/GXD_HTExpCuration.py

TAG: no tag
DATE: 02/07/2023
STAFF: lec
ok to install on production at next tag
florida too/fl2b/expresses-component
weekly/MRK_NonMouseNotInEG.py

TAG: qcreports_db-6-0-22-32
TAG: qcreports_db-6-0-22-31
DATE: 02/02/2023
STAFF: sc
Added MP HP Relationship Load and MP HPO Header mapping load to the index page

TAG: qcreports_db-6-0-22-30
DATE: 02/02/2023
STAFF: lec
wts2-1198/fl2-171/exclude cell line, deleted and certain other alleles
weekly/ALL_MolNotesNoMP.py

TAG: qcreports_db-6-0-22-29
DATE: 01/23/2022
STAFF: sc
wts2-1100/fl2-146/New custom report for extracted text
pwi/BIB_ExtractedTextByMGIIDs.py

TAG: qcreports_db-6-0-22-28
TAG: qcreports_db-6-0-22-27
DATE: 01/13/2022
STAFF: sc
wts2-1091 - weekly/ALL_NomenCheck.py

TAG: qcreports_db-6-0-22-26
DATE: 12/22/2022
STAFF: sc
WTS2-1077 add PubMed ids to HT overview report
mgd/GXD_HTOverview.py

TAG: qcreports_db-6-0-22-25
TAG: qcreports_db-6-0-22-24
TAG: qcreports_db-6-0-22-23
DATE: 12/14/2022, 12/15/2022
STAFF: lec
wts2-1073/Titles come in from pubmed that say 'dagger'"
monthly/BIB_Dagger.sql

TAG: qcreports_db-6-0-22-22
TAG: qcreports_db-6-0-22-21
TAG: qcreports_db-6-0-22-20
TAG: qcreports_db-6-0-22-19
DATE: 12/01/2022, 12/07/2022
STAFF: lec
fl2/gxd secondary triage
monthly/GXD_NotRouted.py
weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-22-18