@@ -50,6 +50,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_COVRefTagCounts.rpt">COV reference tag count report</A> <B>(cjb)</B>
 <LI><A HREF="/data/loads/mgi/pdfdownload/logs/noPdfs.log">Missing PDFs from PMC - automated downloads attempted, but could not find a PDF file</A> <B>(jeo, neb)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_Dagger.sql.rpt">Dagger character in title</A> <B>(neb)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/BIB_MissingDOI.sql.rpt">References Missing DOI number</A> <B>(neb)</B>
 </OL>
 
 <A NAME="alleles"><B>Alleles (csmith, smb, dlb, honda, mnk)</B> </A>
